# Orientable-libgnss-rinex

./: Package.swift  README.md  diff.txt  regenerated.rnx  test_fmt.swift
Sources/GNSSRinex/: Bits.swift  CRC.swift  GNSSCommon.swift  GNSSConstants.swift  GNSSData.swift  GNSSLog.swift  GNSSStrings.swift  GTime.swift  Parity.swift  RinexCommon.swift  RinexGenerate.swift  RinexParse.swift  RinexTypes.swift
Tests/GNSSRinexTests/: GNSSCmnTests.swift  GNSSRinexTests.swift  ParityTests.swift
Tests/rinex_loopback/: CMakeCache.txt  CMakeLists.txt  loopback_tool.c  loopback_tool.swift  run_test.sh
test_vectors/: brdc0010_v3.22n  cross_loopback_output.22n  cross_loopback_output_brdc0010.22n  cross_loopback_output_brdc0010_v3.22n  cross_loopback_output_latest_nav.26n  loopback_output.22n  loopback_output_brdc0010.22n  loopback_output_brdc0010_v3.22n
